Send json from server to client and process using jquery

--- a/app/views/welcome.scala.html
+++ b/app/views/welcome.scala.html
@@ -98,6 +98,10 @@ GET     /               controllers.HomeController.index</code></pre>
     </p>
 
     <p>
+        <input type="button" value="Get Name" id="get_name" >
+    </p>
+
+    <p>
         You can read more about <a href="https://www.playframework.com/documentation/@version/ScalaDependencyInjection">dependency injection</a> in the documentation.
     </p>
 
