--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,6 +17,8 @@
         <script src="@assetsFinder.path("javascripts/jquery-3.3.1/jquery-3.3.1.js")" type="text/javascript"></script>
         <script src="@assetsFinder.path("javascripts/myScripts/hello.js")" type="text/javascript"></script>
         <script src="@assetsFinder.path("javascripts/bootstrap-4.1.3/bootstrap.bundle.js")" type="text/javascript"></script>
+        <script src="@routes.ProductController.jsRoutes" type="text/javascript"></script>
+        <script src="@assetsFinder.path("javascripts/myScripts/hello2.js")" type="text/javascript"></script>
     </head>
     <body>
         @* And here's where we render the `Html` object containing
