--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,13 +12,26 @@
     <head>
         @* Here's where we render the page title `String`. *@
         <title>@title</title>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
         <link rel="stylesheet" media="screen" href="@assetsFinder.path("stylesheets/myCss/main.css")">
+        <link rel="stylesheet" href="@assetsFinder.path("stylesheets/bootstrap-4.1.3/bootstrap.css")">
+        <link rel="stylesheet" href="@assetsFinder.path("stylesheets/open-iconic-1.1.0/font/css/open-iconic-bootstrap.css")">
+        <link rel="stylesheet" href="@assetsFinder.path("stylesheets/myCss/myCss.css")">
+        <link rel="stylesheet" href="@assetsFinder.path("stylesheets/materialize-1.0.0/materialize.min.css")">
+        <link rel="stylesheet" href="@assetsFinder.path("stylesheets/noUiSlider-12.1.0/nouislider.css")">
+
         <link rel="shortcut icon" type="image/png" href="@assetsFinder.path("images/favicon.png")">
         <script src="@assetsFinder.path("javascripts/jquery-3.3.1/jquery-3.3.1.js")" type="text/javascript"></script>
-        <script src="@assetsFinder.path("javascripts/myScripts/hello.js")" type="text/javascript"></script>
         <script src="@assetsFinder.path("javascripts/bootstrap-4.1.3/bootstrap.bundle.js")" type="text/javascript"></script>
         <script src="@routes.ProductController.jsRoutes" type="text/javascript"></script>
+        <script src="@assetsFinder.path("javascripts/materialize-1.0.0/materialize.js")" type="text/javascript"></script>
+        <script src="@assetsFinder.path("javascripts/noUiSlider-12.1.0/nouislider.js")" type="text/javascript"></script>
+        <script src="@assetsFinder.path("javascripts/wNumb-1.1.0/wNumb.js")" type="text/javascript"></script>
+        <script src="@assetsFinder.path("javascripts/myScripts/hello.js")" type="text/javascript"></script>
         <script src="@assetsFinder.path("javascripts/myScripts/hello2.js")" type="text/javascript"></script>
+
     </head>
     <body>
         @* And here's where we render the `Html` object containing
