--- a/app/views/welcome.scala.html
+++ b/app/views/welcome.scala.html
@@ -2,11 +2,124 @@
 
 @defining(play.core.PlayVersion.current) { version =>
 
-<section id="top">
-  <div class="wrapper">
-    <h1><a href="https://playframework.com/documentation/@version/Home">@message</a></h1>
-  </div>
-</section>
+        <div class="jumbotron text-center">
+            <h1>Products</h1>
+            <p>This web app is done with play Scala - would like in the future to connect against hive and use websockets</p>
+        </div>
+
+        <div class="container-fluid">
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link <div id="slider"></div></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+            </ul>
+        </div>
+
+
+        <div class="pos-f-t">
+            <div class="collapse" id="navbarToggleExternalContent">
+                <div class="bg-dark p-4">
+                    <h4 class="text-white">Collapsed content</h4>
+                    <span class="text-muted">
+                        <ul class="nav flex-column">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">Active</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled" href="#">Disabled</a>
+                            </li>
+                        </ul>
+                    </span>
+                </div>
+            </div>
+            <nav class="navbar navbar-dark bg-dark">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </nav>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <h2>Heading</h2>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                </div>
+                <div class="col-sm">
+                    <h2>Heading</h2>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Panel title</h5>
+                            <p class="card-text">Some quick example text to build on the panel title and make up the bulk of the panel's content.</p>
+                            <a class="card-link">Card link</a>
+                            <a class="card-link">Another link</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="card">
+                        <div class="card-header">
+                            Featured
+                            <span class="oi oi-fullscreen-enter" title="fullscreen-enter" aria-hidden="true" data-toggle="modal" data-target="#exampleModalCenter"></span>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Panel title</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Panel subtitle</h6>
+                            <p class="card-text">Some quick example text to build on the panel title and make up the bulk of the panel's content.</p>
+                            <a class="card-link">Card link</a>
+                            <a class="card-link">Another link</a>
+                        </div>
+                    </div>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    ...
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <hr>
+
+
+
 
 <div id="content" class="wrapper doc">
 <article>
@@ -22,50 +135,6 @@
       You’re using Play @version
     </p>
   </blockquote>
-
-  <h2>Why do you see this page?</h2>
-
-    <p>
-      The <code>conf/routes</code> file defines a route that tells Play to invoke the <code>HomeController.index</code> action
-      whenever a browser requests the <code>/</code> URI using the GET method:
-    </p>
-
-    <pre><code># Home page
-GET     /               controllers.HomeController.index</code></pre>
-
-    <p>
-      Play has invoked the <code>controllers.HomeController.index</code> method to obtain the <code>Action</code> to execute:
-    </p>
-
-    <pre><code>def index = Action {
-  Ok(views.html.index("Your new application is ready."))
-}</code></pre>
-
-    <p>
-      An action is a function that handles the incoming HTTP request, and returns the HTTP result to send back to the web client.
-      Here we send a <code>200 OK</code> response, using a template to fill its content.
-    </p>
-
-    <p>
-      The template is defined in the <code>app/views/index.scala.html</code> file and compiled as a Scala function.
-    </p>
-
-    <pre><code>@@(message: String)
-
-@@main("Welcome to Play") {
-
-    @@welcome(message, style = "scala")
-
-}</code></pre>
-
-    <p>
-      The first line of the template defines the function signature. Here it just takes a single <code>String</code> parameter.
-      This template then calls another function defined in <code>app/views/main.scala.html</code>, which displays the HTML
-      layout, and another function that displays this welcome message. You can freely add any HTML fragment mixed with Scala
-      code in this file.
-    </p>
-
-    <p>You can read more about <a href="https://www.playframework.com/documentation/@version/ScalaTemplates">Twirl</a>, the template language used by Play, and how Play handles <a href="https://www.playframework.com/documentation/@version/ScalaActions">actions</a>.</p>
 
     <h2>Async Controller</h2>
 
@@ -111,51 +180,9 @@ GET     /               controllers.HomeController.index</code></pre>
     For more information on the various commands you can run on Play, i.e. running tests and packaging applications for production, see <a href="https://playframework.com/documentation/@version/PlayConsole">Using the Play console</a>.
   </p>  
 
-  <h2>Need to set up an IDE?</h2>
-
-  <p>
-      You can start hacking your application right now using any text editor. Any changes will be automatically reloaded at each page refresh, 
-      including modifications made to Scala source files.
-  </p>
-
-  <p>
-      If you want to set-up your application in <strong>IntelliJ IDEA</strong> or any other Java IDE, check the 
-      <a href="https://www.playframework.com/documentation/@version/IDE">Setting up your preferred IDE</a> page.
-  </p>
-
-  <h2>Need more documentation?</h2>
-
-  <p>
-    Play documentation is available at <a href="https://www.playframework.com/documentation/@version">https://www.playframework.com/documentation</a>.
-  </p>
-
-  <p>
-    Play comes with lots of example templates showcasing various bits of Play functionality at <a href="https://www.playframework.com/download#examples">https://www.playframework.com/download#examples</a>.
-  </p>
-
-  <h2>Need more help?</h2>
-
-  <p>
-    Play questions are asked and answered on Stackoverflow using the "playframework" tag: <a href="https://stackoverflow.com/questions/tagged/playframework">https://stackoverflow.com/questions/tagged/playframework</a>
-  </p>
-
-  <p>
-    The <a href="https://discuss.playframework.com">Discuss Play Forum</a> is where Play users come to seek help,
-    announce projects, and discuss issues and new features.
-  </p>
-
-  <p>
-    Gitter is a real time chat channel, like IRC. The <a href="https://gitter.im/playframework/playframework">playframework/playframework</a>  channel is used by Play users to discuss the ins and outs of writing great Play applications.
-  </p>
- 
 </article>
 
 <aside>
-  <h3>Browse</h3>
-  <ul>
-    <li><a href="https://playframework.com/documentation/@version">Documentation</a></li>
-    <li><a href="https://playframework.com/documentation/@version/api/@style/index.html">Browse the @{style.capitalize} API</a></li>
-  </ul>
   <h3>Start here</h3>
   <ul>
     <li><a href="https://playframework.com/documentation/@version/PlayConsole">Using the Play console</a></li>
@@ -172,4 +199,8 @@ GET     /               controllers.HomeController.index</code></pre>
 </aside>
 
 </div>
+
+        <footer class="container-fluid text-center">
+            <p>Footer Text</p>
+        </footer>
 }
