--- a/public/stylesheets/myCss/myCss.css
+++ b/public/stylesheets/myCss/myCss.css
@@ -3,8 +3,9 @@ footer {
   background-color: #f2f2f2;
   padding: 25px;
 }
+/* End Set black background color, white text and some padding */
 
-/* Css for the main menu */
+/* properties for the main menu */
 .nav-tabs{
   background-color:#f2f2f2;
 }
@@ -22,7 +23,10 @@ footer {
     border-radius: 0;
     color:#fff;
 }
+/* end properties for the main menu */
 
-/* css for the icon to maximize card  and change cursor */
+/* icon to maximize card  and change cursor */
 .oi.oi-fullscreen-enter { float: right; }
 .oi.oi-fullscreen-enter:hover {cursor: pointer;}
+/* end icon to maximize card  and change cursor */
+
